chore: replace Console/System.out with slf4j and handle System.exit gracefully